# supvz

./: .gitignore  .pre-commit-config.yaml  README.md
auth_service/: .dockerignore  .env  .env.test  Dockerfile  docker-compose.yml  main.py  prestart.sh  pyproject.toml
auth_service/migrations/: env.py
auth_service/migrations/versions/: 0fe753e6dc4e_.py  147bdb0b7d3b_.py  1b9ad94cbe48_.py  3186441d60db_.py  39b378d7cfb3_.py  3cd571d5d78c_.py  7a0219ee0a11_.py  8e733e36f7f5_change_roles.py  ba3fc2cd3cc2_.py  cb90054f067a_.py  cbb3d1d25ab4_.py  d2afa433eebc_.py  d56274cd1f84_add_stateful_tokens_table.py  d71ef1ba876f_init.py  e38afe1596a0_.py  f681bf350b70_init.py  fe9bebaa7604_.py
auth_service/nginx/: nginx.conf
auth_service/pg_data/: postmaster.pid
auth_service/pg_data/base/1/: 1259  2619  2619_vm  2696  2840  2841
auth_service/pg_data/base/16384/: 1247  1249  1259  16385  16388  16390  16398  16402  16416  16423  16471  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
auth_service/pg_data/base/5/: pg_internal.init
auth_service/pg_data/global/: 1260  1262  2671  pg_control  pg_internal.init
auth_service/postgres/: init.sql
auth_service/src/: dependencies.py  initial_data.py  main.py  repository.py  routes.py  schemas.py  service.py
auth_service/src/core/security/: hash_helper.py  token_handler.py
auth_service/src/dao/: base.py  baseDAO.py  custom_positionsDAO.py  permissionsDAO.py  positionsDAO.py  pvzsDAO.py  system_positionsDAO.py  tokensDAO.py  users.py  usersDAO.py
auth_service/src/database/: base.py
auth_service/src/models/: __init__.py
auth_service/src/models/permissions/: permissions.py
auth_service/src/models/position_permissions/: custom_position_permissions.py  position_permissions.py  system_position_permissions.py
auth_service/src/models/positions/: custom_positions.py  positions.py  system_positions.py
auth_service/src/models/pvzs/: PVZ_workers.py  PVZs.py
auth_service/src/models/tokens/: access_tokens.py  refresh_tokens.py  stateful_tokens.py
auth_service/src/models/user_permissions/: user_permissions.py
auth_service/src/models/users/: users.py
auth_service/src/routers/: __init__.py  auth.py  auth_router.py  permissions_router.py  positions_router.py  users_router.py
auth_service/src/schemas/: custom_positions_schemas.py  enums.py  perm_positions_schemas.py  permissions_schemas.py  positions_schemas.py  system_positions_schemas.py  tokens.py  tokens_schemas.py  users_schemas.py
auth_service/src/services/: auth_service.py  permission_service.py  position_service.py  token_service.py  user_service.py
auth_service/src/settings/: config.py
auth_service/src/tests/: conftest.py  fake_services.py  test_auth_negative.py  test_auth_positive.py  test_authorize.py  test_dao.py  test_fake.py  test_val.py  utils.py
auth_service/src/tests/factories/: base_factories.py  custom_position_factories.py  permission_factories.py  system_position_factories.py  user_factories.py
auth_service/src/utils/: dependencies.py  exceptions.py  exceptions_handler.py  logger_settings.py  middleware.py  rate_limiter.py
pvz_service/: .dockerignore  .env  .env.test  Dockerfile  docker-compose.yml  pyproject.toml
pvz_service/migrations/: env.py
pvz_service/migrations/versions/: 0c9d08ac3d05_.py  100f0b798f99_.py  6ea6a26e7304_.py  74245fb0891a_.py  81763a67f6af_.py  9a3105928232_.py  9e3b11af031e_.py  c4a93923aef0_.py  d44827dde055_.py  d49148f648a1_.py  d5205001b1aa_.py  da4912f36da6_.py
pvz_service/nginx/: nginx.conf
pvz_service/postgres/: Dockerfile  init.sql
pvz_service/src/: main.py
pvz_service/src/dao/: baseDAO.py  employeesDAO.py  inboxDAO.py  pvzGroupsDAO.py  pvzsDAO.py
pvz_service/src/database/: base.py
pvz_service/src/enums/: inbox.py
pvz_service/src/models/: __init__.py
pvz_service/src/policies/: employee_policy.py  pvz_group_policy.py  pvz_policy.py
pvz_service/src/routers/: __init__.py  employees_router.py  pvz_group_router.py  pvz_router.py
pvz_service/src/schemas/: employees_schemas.py  inbox_schemas.py  pvz_group_schemas.py  pvz_schemas.py
pvz_service/src/services/: employees_service.py  inbox_cleanup_service.py  inbox_service.py  pvz_groups_service.py  pvz_service.py
pvz_service/src/settings/: config.py
pvz_service/src/tests/: conftest.py  factories.py  run_tests.py
pvz_service/src/utils/: dependencies.py  exception_mapper.py  exceptions.py  exceptions_handler.py
shifts_service/: .dockerignore  .env  .env.test  docker-compose.yml  pyproject.toml
shifts_service/migrations/versions/: 003f10aa4b39_init1.py  2e7e12c6a564_init5.py  7909f74fb14a_.py  94b30bc57eb2_init.py  a1b2c3d4e5f6_add_shift_penalties_table.py  a1bb492615b3_init3.py  b2c3d4e5f6g7_add_scheduled_shift_id_to_penalties.py  ea8dfbf7bd85_init4.py
shifts_service/nginx/: nginx.conf
shifts_service/postgres/: Dockerfile  init.sql
shifts_service/src/: main.py
shifts_service/src/core/: scheduler.py
shifts_service/src/dao/: ScheduledShiftsDAO.py  baseDAO.py  salary_rulesDAO.py  shift_penaltiesDAO.py  shift_requestsDAO.py  shiftsDAO.py
shifts_service/src/models/: __init__.py  salary_rules.py  scheduled_shifts.py  shift_penalties.py  shift_requests.py  shifts.py
shifts_service/src/routers/: __init__.py  salary_rules_router.py  scheduled_shifts_router.py  shift_penalties_router.py  shift_requests_router.py  shifts_router.py
shifts_service/src/schemas/: salary_schemas.py  scheduled_shifts_schemas.py  shift_penalties_schemas.py  shift_requests_schemas.py  shifts_schemas.py
shifts_service/src/services/: salary_rules_service.py  scheduled_shifts_service.py  shift_penalties_service.py  shift_requests_service.py  shift_service.py  shifts_service.py
shifts_service/src/settings/: config.py
shifts_service/src/tests/: conftest.py  factories.py  run_tests.py
shifts_service/src/utils/: custom_exceptions.py  dependencies.py  exception_handler.py  exceptions.py  exceptions_handler.py  middleware.py
(+344 files in other folders)
