[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Alexandrov",email = "dibilarts@gmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "ruff (>=0.12.9,<0.13.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501"]
target-version = "py311"