[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Alexandrov",email = "dibilarts@gmail.com"},
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "ruff (>=0.12.9,<0.13.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "fastapi-pagination (>=0.14.3,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    # Зависимости
    "**/node_modules/**",
    "**/vendor/**",
    "**/.venv/**",
    "**/venv/**",
    "**/env/**",
    "**/site-packages/**",

    # Миграции
    "**/migrations/**",
    "**/alembic/versions/**",
    "**/db/migrations/**",

    # Сгенерированные файлы
    "**/build/**",
    "**/dist/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",

    # Дополнительные исключения
    "**/.git/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501", "F821", "B008"]