[project]
name = "pvz-service"
version = "0.1.0"
description = ""
authors = [
    {name = "vladbily",email = "vladbilyk2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
