[project]
name = "pvz-service"
version = "0.1.0"
description = ""
authors = [
    { name = "vladbily", email = "vladbilyk2005@gmail.com" },
    { name = "Danila Kashtanov", email = "kdvpd2004@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501", "F821", "B008"]
