[project]
name = "shifts-service"
version = "0.1.0"
description = ""
authors = [
    {name = "vladbily",email = "vladbilyk2005@gmail.com"}
]

requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi-pagination (>=0.15.4,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    # Зависимости
    "**/node_modules/**",
    "**/vendor/**",
    "**/.venv/**",
    "**/venv/**",
    "**/env/**",
    "**/site-packages/**",

    # Миграции
    "**/migrations/**",
    "**/alembic/versions/**",
    "**/db/migrations/**",

    # Сгенерированные файлы
    "**/build/**",
    "**/dist/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",

    # Дополнительные исключения
    "**/.git/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501", "F821", "B008"]
